Fixed background overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,5 +63,6 @@ p {
     background-size: cover;
     width: 100%;
     height: 600px;
+    overflow: hidden;
 }
 
